# streaming-01-foundations

./: .pre-commit-config.yaml  AGENTS.md  CITATION.cff  README.md  pyproject.toml  ruff.strict.toml  zensical.toml
.github/workflows/: ci-python-zensical.yml
docs/: api.md  glossary.md  project-instructions.md  your-files.md
docs/module/: variables.md
src/streaming/: producer_case.py
tests/: test_app_case.py
